# libDeepSort

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
include/: DeepSort.h  featuremodel.h  linear_assignment.h  model.h  track.h
src/: DeepSort.cpp  featuremodel.cpp  model.cpp  nn_matching.cpp  tracker.cpp
